--- a/flask/templates/tophashtag.html
+++ b/flask/templates/tophashtag.html
@@ -62,11 +62,17 @@
             <ion-icon name="menu-outline"></ion-icon>
           </div>
           <!-- Search -->
-          <div class="search">
-            <label>
-              <input type="text" placeholder="Search here" />
-              <ion-icon name="search-outline"></ion-icon>
-            </label>
+            <div class="search">
+            <form id="searchForm" action="/search_total_tweet" method="post">
+              <label>
+                <input
+                  type="text"
+                  name="search_query"
+                  placeholder="Search here"
+                />
+                <ion-icon name="search-outline"></ion-icon>
+              </label>
+            </form>
           </div>
           <!-- UsrImg -->
           <div class="user">
@@ -112,7 +118,7 @@
           <div class="card">
             <div>
               <div class="numbers">{{top[4]}}</div>
-              <div class="cardName">Top quote</div>
+              <div class="cardName">Top tweets</div>
             </div>
             <div class="iconBx">#{{top[9]}}</div>
           </div>
